# forge

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  PREREQUISITES.md  README.md  docker-compose.yml  forge.py  forge_user_manual.md  install.ps1  install.sh  pyproject.toml
.agents/rules/: code-style-guide.md
.claude/: settings.local.json
.claude/agents/: code-review-refactorer.md
.github/workflows/: ci.yml  docker.yml  publish.yml
src/: brain.py  cli.py  context_engine.py  project_graph.py  summariser.py  vector_store.py  worker.py
src/forge/: __init__.py  auto_runner.py  brain.py  cli.py  config.py  context_engine.py  exceptions.py  feedback.py  handoff.py  persistent_memory.py  plan_parser.py  project_graph.py  retry.py  session_logger.py  summariser.py  vector_store.py  worker.py
tests/: __init__.py  conftest.py  test_auto_runner.py  test_config.py  test_core.py  test_exceptions.py  test_memory_system.py  test_plan_parser.py  test_retry.py  test_summariser.py
