[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge"
version = "0.1.0"
description = "CLI coding agent with hybrid context retrieval and local MCP worker"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "networkx>=3.3",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "gitpython>=3.1.43",
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
forge = "src.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pylint>=2.17.0",
]
