[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-coder"
version = "0.2.0"
description = "Local-first autonomous coding agent CLI"
authors = [{name = "Developer", email = "dev@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["ai", "coding-agent", "llm", "cli", "local-ai"]

dependencies = [
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "networkx>=3.3",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "click>=8.1.7",
    "gitpython>=3.1.43",
    "watchdog>=4.0.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "prompt_toolkit>=3.0.0",
]

[project.scripts]
forge = "forge.cli:forge"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
